Update AdamAsmacaSwingGame.java